[metadata]
name = check-requirements
version = 1.0.0
description = Script/pre-commit hook to check the contents of requirements.txt against "pip freeze"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = check-requirements
python_requires = >=3.10.4

[options.entry_points]
console_scripts =
    check-requirements = check_requirements
